<resources>
    <string name="app_name">Wishing Well</string>
    <string name="title_activity_wishlist_collection">Wishlist</string>
    <string name="title_home">Wishlist</string>
    <string name="title_dashboard">Add Product</string>
    <string name="title_notifications">Notifications</string>
    <string name="collection">Collection</string>
    <string name="create">Create</string>
    <string name="history">History</string>

    <string name="fill">Fill</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_url_here">Enter a url here</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="add_to_list">Add To List</string>
    <string name="new_list_alert_hint">List name</string>
    <string name="new_list_alert_title">Create a new collection</string>
    <string name="new_list_alert_message">Give your wish list a name</string>
    <string name="add">Add</string>
    <string name="spinner_select_placeholder">Select a collection</string>
    <string name="new_list">New</string>
</resources>
