<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">
<WebView
    android:layout_width="0dp"
    android:layout_height="0dp"
    tools:ignore="MissingConstraints"
    android:id="@+id/browser"/>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/productTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/productTitle"
        app:srcCompat="@drawable/ic_label_outline_black_24dp"
         />

    <EditText
        android:id="@+id/productUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_a_url_here"
        android:inputType="textUri"
        app:layout_constraintEnd_toStartOf="@+id/fill"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/productUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/productUrl"
        app:srcCompat="@drawable/ic_public_black_24dp" />

    <EditText
        android:id="@+id/productTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/productUrl"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/price"
        android:minWidth="88dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/productTitle"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/productPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/productPrice"
        app:srcCompat="@mipmap/currency" />

    <ImageView
        android:id="@+id/autoCompletedImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/addProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@mipmap/ic_launcher" />

    <ToggleButton
        android:id="@+id/fill"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:textOff="@string/fill"
        android:textOn="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/productUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/productUrl" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewList" />

    <Button
        android:id="@+id/addProduct"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add_to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/listSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/addNewList"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/productPrice" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/listSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listSpinner"
        app:srcCompat="@drawable/ic_dashboard_black_24dp" />

    <Button
        android:id="@+id/addNewList"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/new_list"
        app:layout_constraintBottom_toBottomOf="@+id/listSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>